--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,7 @@ a:hover {
   color: var(--gold);
 }
 .btn {
+  height: 4rem;
   padding: 1rem 2rem;
   margin: 1rem 0;
   padding: 1rem 2rem;
@@ -273,7 +274,6 @@ a:hover {
   margin-top: 2rem;
   align-content: center;
   display: flex;
-  grid-gap: 18px;
   /* background-color: red; */
 }
 .service--active .service:not(:hover),
@@ -301,9 +301,11 @@ a:hover {
 
   overflow: hidden;
 }
+.service:not(:first-child) {
+  margin-left: 2rem;
+}
 .service--active,
 .service:hover {
-  margin: 0 1rem;
   transform: scale(1.06);
   /* transition-delay: 200ms; */
   box-shadow: var(--yellow-shadow);
@@ -464,7 +466,7 @@ a:hover {
   top: -1rem;
   left: -8rem;
   background-color: rgba(0, 0, 0, 0.452);
-  width: 200%;
+  width: 400%;
   height: 200%;
   z-index: -1;
 }
@@ -587,6 +589,7 @@ a:hover {
   position: relative;
   background-color: var(--light);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
+  overflow: hidden;
 }
 .card--overlap {
   position: relative;
@@ -762,7 +765,12 @@ footer {
 .footer__item {
   margin: 0.1rem 0;
 }
-
+.rows {
+  display: grid;
+}
+.rows > * {
+  margin: 0;
+}
 /* MODAL AND POPUPS */
 .modal {
   /* safe width, respect the main container padding*/
@@ -785,6 +793,20 @@ footer {
   overflow: hidden;
   z-index: 9999;
 }
+.modal--small {
+  width: 50vw;
+  height: 60vh;
+}
+.modal--small .modal__text {
+  padding: 0;
+  text-align: justify;
+  width: 100%;
+}
+.modal--small #btnModalClose {
+  background-color: var(--navy);
+  color: var(--gold);
+  width: 100%;
+}
 .modal--large {
   width: var(--w);
   height: 80vh;
@@ -802,7 +824,7 @@ footer {
   background-color: var(--base);
 }
 .modal__list {
-  --gap: 2rem;
+  --gap: 1rem;
   position: relative;
   width: calc(var(--w) + var(--sm-pad));
   flex-basis: 80%;
@@ -822,14 +844,18 @@ footer {
   position: fixed;
   width: 10vw;
   height: 100%;
-  background-image: linear-gradient(90deg, #fff, transparent);
-  top: 30%;
-  left: 0;
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.445),
+    transparent
+  );
+  top: 0;
+  left: -2px;
   z-index: 2;
 }
 .modal__list::after {
   left: unset;
-  right: 0;
+  right: -2px;
   transform: rotate(180deg);
 }
 .btn--outline {
@@ -871,15 +897,30 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  background-color: black;
+  cursor: pointer;
   padding: 36px;
+  transform: scale(0.99);
 }
 .modal__list .list__item:last-child {
   margin-right: var(--card-width);
 }
+.modal__list .list__item:hover {
+  transform: scale(1.02);
+  box-shadow: 0 0 8px rgba(255, 191, 40, 0.527);
+  z-index: 10;
+}
+.modal__list:hover .list__item:not(:hover) {
+  filter: grayscale(1) brightness(0.7);
+}
 .enquiry__group {
   position: absolute;
-  width: calc(var(--w) - var(--sm-pad));
-  height: inherit;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  padding: var(--sm-pad);
+  margin: 0 !important;
   background-color: var(--light);
 }
 .enquiry__form {
@@ -912,6 +953,9 @@ footer {
   margin: 0 auto;
   width: 80%;
   text-align: center;
+}
+#btnRequestProdQoute {
+  display: none;
 }
 /* REGION: Mobile */
 @media screen and (max-width: 678px) {
@@ -1055,6 +1099,9 @@ footer {
   }
   .service {
     transform-origin: right;
+  }
+  .service:not(:first-child){
+    margin: 0;
   }
   .service--active,
   .service:hover {
